fix(tags): wrap tags to new lines

--- a/web/themes/custom/julkaisut/assets/styles/partials/field-tags.scss
+++ b/web/themes/custom/julkaisut/assets/styles/partials/field-tags.scss
@@ -1,10 +1,13 @@
 .field--name-field-tags  {
   .field__items {
     display: flex;
+    flex-wrap: wrap;
+    margin-bottom: calc(var(--spacing-2-xs) * -1);
   }
 
-  .field__item:not(:first-child) {
-    margin-left: var(--spacing-xs);
+  .field__item:not(:last-child) {
+    margin-right: var(--spacing-xs);
+    margin-bottom: var(--spacing-2-xs);
   }
 
   a {
@@ -15,6 +18,8 @@
     padding: 7px 16px;
     border-radius: 50px;
     text-decoration: none;
+    display: inline-block;
+    text-align: center;
 
     &:hover,
     &:focus {
